--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,20 +1,32 @@
-<div class="container">
-  <div class="bg-white rounded-lg -lg p-5 md:p-20 mx-2">
-    <div class="py-8 px-4 mx-auto  text-center lg:py-16 lg:px-12">
-      <svg class="mx-auto mb-4 w-10 h-10 text-dark" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-        <path fill="currentColor"
-          d="M331.8 224.1c28.29 0 54.88 10.99 74.86 30.97l19.59 19.59c40.01-17.74 71.25-53.3 81.62-96.65c5.725-23.92 5.34-47.08 .2148-68.4c-2.613-10.88-16.43-14.51-24.34-6.604l-68.9 68.9h-75.6V97.2l68.9-68.9c7.912-7.912 4.275-21.73-6.604-24.34c-21.32-5.125-44.48-5.51-68.4 .2148c-55.3 13.23-98.39 60.22-107.2 116.4C224.5 128.9 224.2 137 224.3 145l82.78 82.86C315.2 225.1 323.5 224.1 331.8 224.1zM384 278.6c-23.16-23.16-57.57-27.57-85.39-13.9L191.1 158L191.1 95.99l-127.1-95.99L0 63.1l96 127.1l62.04 .0077l106.7 106.6c-13.67 27.82-9.251 62.23 13.91 85.39l117 117.1c14.62 14.5 38.21 14.5 52.71-.0016l52.75-52.75c14.5-14.5 14.5-38.08-.0016-52.71L384 278.6zM227.9 307L168.7 247.9l-148.9 148.9c-26.37 26.37-26.37 69.08 0 95.45C32.96 505.4 50.21 512 67.5 512s34.54-6.592 47.72-19.78l119.1-119.1C225.5 352.3 222.6 329.4 227.9 307zM64 472c-13.25 0-24-10.75-24-24c0-13.26 10.75-24 24-24S88 434.7 88 448C88 461.3 77.25 472 64 472z" />
-      </svg>
-      <h1 class="mb-4 text-4xl font-bold tracking-tight leading-none lg:mb-6 md:text-5xl xl:text-6xl">App
-        <span class="text-indigo-600">Under Construction</span>
-      </h1>
-    </div>
-    <div class="flex flex-wrap mt-4 justify-center">
-      <a href="https://github.com/learnwithalfred/furry-invention" title="Github repository" target="_blank"
-        class=" bg-white tracking-wide text-gray-800 font-bold rounded border-2 border-indigo-600 hover:border-indigo-600 hover:bg-indigo-600 hover:text-white shadow-md py-2 px-6 inline-flex items-center">
-        <span class="mx-auto">Github repository</span>
-      </a>
+<section class="bg-white items-center justify-center ">
+  <div class="py-8 px-4 mx-auto max-w-screen-xl text-center lg:py-16 lg:px-12">
+    <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl ">Welcome
+      to Offinso Municipal Stores Data Collection App</h1>
+    <p class="mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 xl:px-48 dark:text-gray-400">Lorem, ipsum dolor
+      sit amet consectetur adipisicing elit. Similique, dolor quo! Fugiat quia quasi ad ipsam eligendi omnis corporis
+      aliquam voluptatibus? Accusantium itaque est laudantium et quo ratione earum magni?</p>
+    <div class="flex flex-col  space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4">
+      <div class="py-8 px-4 mx-auto  text-center lg:py-16 lg:px-12">
+        <svg class="mx-auto mb-4 w-10 h-10 text-dark" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+          <path fill="currentColor"
+            d="M331.8 224.1c28.29 0 54.88 10.99 74.86 30.97l19.59 19.59c40.01-17.74 71.25-53.3 81.62-96.65c5.725-23.92 5.34-47.08 .2148-68.4c-2.613-10.88-16.43-14.51-24.34-6.604l-68.9 68.9h-75.6V97.2l68.9-68.9c7.912-7.912 4.275-21.73-6.604-24.34c-21.32-5.125-44.48-5.51-68.4 .2148c-55.3 13.23-98.39 60.22-107.2 116.4C224.5 128.9 224.2 137 224.3 145l82.78 82.86C315.2 225.1 323.5 224.1 331.8 224.1zM384 278.6c-23.16-23.16-57.57-27.57-85.39-13.9L191.1 158L191.1 95.99l-127.1-95.99L0 63.1l96 127.1l62.04 .0077l106.7 106.6c-13.67 27.82-9.251 62.23 13.91 85.39l117 117.1c14.62 14.5 38.21 14.5 52.71-.0016l52.75-52.75c14.5-14.5 14.5-38.08-.0016-52.71L384 278.6zM227.9 307L168.7 247.9l-148.9 148.9c-26.37 26.37-26.37 69.08 0 95.45C32.96 505.4 50.21 512 67.5 512s34.54-6.592 47.72-19.78l119.1-119.1C225.5 352.3 222.6 329.4 227.9 307zM64 472c-13.25 0-24-10.75-24-24c0-13.26 10.75-24 24-24S88 434.7 88 448C88 461.3 77.25 472 64 472z" />
+        </svg>
+        <h1 class="mb-4 text-4xl font-bold tracking-tight leading-none lg:mb-6 md:text-5xl xl:text-6xl">
+          <span class="text-indigo-600">Under Construction</span>
+        </h1>
+
+      </div>
 
     </div>
+     <div class="flex justify-center gap-4">
+      <a href="https://github.com/learnwithalfred/furry-invention" title="Github repository" target="_blank"
+        class=" bg-white tracking-wide text-gray-800 font-bold rounded border-2 border-indigo-600 hover:border-indigo-600 hover:bg-indigo-600 hover:text-white shadow py-2 px-6 inline-flex items-center ">
+        <span class="mx-auto">Github repository</span>
+      </a>
+      <a href="/auth/sign_up" title="Github repository" target="_blank"
+        class="bg-indigo-900 tracking-wide text-gray-100 font-bold rounded border-2 border-indigo-600 hover:border-indigo-600 hover:bg-indigo-600 hover:text-white shadow py-2 px-6 inline-flex items-center ">
+        <span class="mx-auto">Register Account</span>
+      </a>
+    </div>
   </div>
-</div>
+</section>
