Update select element

--- a/app/views/store_taxes/_form.html.erb
+++ b/app/views/store_taxes/_form.html.erb
@@ -13,12 +13,18 @@
 
   <div class="my-5">
     <%= form.label :store_id %>
-    <%= form.text_field :store_id, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+        <div class="mt-1 rounded-md shadow-sm">
+      <%=form.collection_select :store_id, Store.order(:serial_number), :id, :serial_number , class:"bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full py-3 px-5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 w-full" %>
+    </div>
+    <!-- <%= form.text_field :store_id, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %> -->
   </div>
 
   <div class="my-5">
     <%= form.label :tax_id %>
-    <%= form.text_field :tax_id, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+            <div class="mt-1 rounded-md shadow-sm">
+      <%=form.collection_select :tax_id, Tax.order(created_at: :desc), :id, :name , class:"bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full py-3 px-5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 w-full" %>
+    </div>
+    <!-- <%= form.text_field :tax_id, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %> -->
   </div>
 
   <div class="inline">
