--- a/app/views/payments/_form.html.erb
+++ b/app/views/payments/_form.html.erb
@@ -23,6 +23,9 @@
 
   <div class="my-5">
     <%= form.label :store_id %>
+        <div class="mt-1 rounded-md shadow-sm">
+      <%=form.collection_select :store_id, Store.order(:serial_number), :id, :serial_number , class:"bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full py-3 px-5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 w-full" %>
+    </div>
     <%= form.text_field :store_id, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
   </div>
 
@@ -45,10 +48,11 @@
     <%= form.label :arrears %>
     <%= form.text_field :arrears, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
   </div>
-
   <div class="my-5">
     <%= form.label :tax_id %>
-    <%= form.text_field :tax_id, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+    <div class="mt-1 rounded-md shadow-sm">
+      <%=form.collection_select :tax_id, Tax.order(:name), :id, :name , class:"bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 w-full" %>
+    </div>
   </div>
 
   <div class="inline">
