--- a/app/views/taxes/_tax.html.erb
+++ b/app/views/taxes/_tax.html.erb
@@ -1,7 +1,7 @@
 <div id="<%= dom_id tax %>">
   <p class="my-5">
-    <strong class="block font-medium mb-1">User:</strong>
-    <%= tax.user_id %>
+    <strong class="block font-medium mb-1">Collected By:</strong>
+    <%= tax.user.name %>
   </p>
 
   <p class="my-5">
@@ -21,7 +21,7 @@
 
   <p class="my-5">
     <strong class="block font-medium mb-1">Amount:</strong>
-    <%= tax.amount %>
+    GH₵ <%= tax.amount %>
   </p>
 
   <% if action_name != "show" %>
