Add user authorization
Only users with specific roles can do specific task

--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -6,7 +6,9 @@
 
     <%= render @store %>
 
+    <% if can? :update, @store %>
     <%= link_to 'Edit this store', edit_store_path(@store), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+    <% end %>
     <div class="inline-block ml-2">
       <%= button_to 'Destroy this store', store_path(@store), method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
     </div>
