--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,42 +10,19 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
-
   <body>
-    <!-- <% if user_signed_in? %>
-            <%=button_to "Logout", destroy_user_session_path, method: :delete, class:"transition border bg-red-500
-      hover:bg-red-700 focus:outline-none group relative flex w-full
-      justify-center rounded-md border-transparent px-4 py-2 my-4 text-sm
-      font-medium leading-5 text-white duration-150 ease-in-out" %>
-
-                  <%=link_to "Update Profile", edit_user_registration_path, class: "transition border bg-blue-500
-      hover:bg-blue-700 focus:outline-none group relative flex w-full
-      justify-center rounded-md border-transparent px-4 py-2 my-4 text-sm
-      font-medium leading-5 text-white duration-150 ease-in-out" %>
-
-
-   <% else %>
-      <%= link_to "Login", new_user_session_path, class: "transition border bg-blue-500
-      hover:bg-blue-700 focus:outline-none group relative flex w-full
-      justify-center rounded-md border-transparent px-4 py-2 my-4 text-sm
-      font-medium leading-5 text-white duration-150 ease-in-out" %>
-      <%= link_to "Sign Up", new_user_registration_path, class: "transition border bg-blue-500
-      hover:bg-blue-700 focus:outline-none group relative flex w-full
-      justify-center rounded-md border-transparent px-4 py-2 my-4 text-sm
-      font-medium leading-5 text-white duration-150 ease-in-out" %>
-    <% end %> -->
     <main>
+    <%= render 'shared/navbar' %>
+                      <div class="flash"><%= render 'shared/flash' %> </div>
+
       <div class="max-w-9xl mx-auto px-4 py-2 sm:px-6 lg:px-8">
+
         <div class="mx-auto max-w-9xl">
-          <div class="flash"><%= render 'shared/flash' %> </div>
           <%= yield %>
-          <!-- <%= link_to :back, class:"py-4 my-4 focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900" do %>
-          <i class="bi px-3 bi-arrow-left-circle"></i>
-          Return Back
-          <% end%> -->
         </div>
       </div>
       </div>
     </main>
+    <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
   </body>
 </html>
