Restrict access to stores

--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -9,9 +9,12 @@
     <% if can? :update, @store %>
     <%= link_to 'Edit this store', edit_store_path(@store), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
     <% end %>
-    <div class="inline-block ml-2">
+    <!-- <div class="inline-block ml-2">
       <%= button_to 'Destroy this store', store_path(@store), method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
-    </div>
+    </div> -->
+        <% if can? :read, @store %>
+
     <%= link_to 'Back to stores', stores_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+ <% end %>
   </div>
 </div>
