--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -73,12 +73,15 @@
       <img src="https://flowbite.com/docs/images/logo.svg" class="mr-3 h-6 sm:h-9" alt="Flowbite Logo">
       <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Offinso Municipal</span>
     </a>
+
+              <% if current_user %>
+
     <div class="flex items-center">
 
       <!-- <a href="tel:5541251234" class="mr-6 text-sm font-medium text-gray-500 dark:text-white hover:underline">(555) 412-1234</a> -->
-      <!-- <span class="mr-6 text-sm font-medium text-gray-500 dark:text-white hover:underline">
+      <span class="mr-6 text-sm font-medium text-gray-500 dark:text-white hover:underline">
           <%= current_user.role.capitalize() %> Account
-        </span> -->
+        </span>
     </div>
     <div @click.away="open = false" class="relative" x-data="{ open: false }">
       <button @click="open = !open"
@@ -98,8 +101,37 @@
         </div>
       </div>
     </div>
+     <% else %>
+      <div @click.away="open = false" class="relative" x-data="{ open: false }">
+        <button @click="open = !open"
+          class="flex flex-row items-center w-full px-4 py-2 mt-2 text-sm font-semibold text-left bg-transparent rounded-lg dark-mode:bg-transparent dark-mode:focus:text-white dark-mode:hover:text-white dark-mode:focus:bg-gray-600 dark-mode:hover:bg-gray-600 md:w-auto md:inline md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline">
+          <span>
+             Authenticate Account
+          </span>
+          <svg fill="currentColor" viewBox="0 0 20 20" :class="{'rotate-180': open, 'rotate-0': !open}"
+            class="inline w-4 h-4 mt-1 ml-1 transition-transform duration-200 transform md:-mt-1">
+            <path fill-rule="evenodd"
+              d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+              clip-rule="evenodd"></path>
+          </svg>
+        </button>
+        <div x-show="open" x-transition:enter="transition ease-out duration-100"
+          x-transition:enter-start="transform opacity-0 scale-95"
+          x-transition:enter-end="transform opacity-100 scale-100" x-transition:leave="transition ease-in duration-75"
+          x-transition:leave-start="transform opacity-100 scale-100"
+          x-transition:leave-end="transform opacity-0 scale-95"
+          class="absolute right-0 w-full mt-2 origin-top-right rounded-md shadow-lg md:w-48">
+          <div class="px-2 py-2 dark:text-white dark:bg-gray-900 rounded-md shadow dark-mode:bg-gray-800">
+            <%= link_to "Sign Up", new_user_registration_path, class:"block px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark-mode:bg-transparent dark-mode:hover:bg-gray-600 dark-mode:focus:bg-gray-600 dark-mode:focus:text-white dark-mode:hover:text-white dark-mode:text-gray-200 md:mt-0 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline" %>
+            <%= link_to "Login", new_user_session_path, class:"block px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark-mode:bg-transparent dark-mode:hover:bg-gray-600 dark-mode:focus:bg-gray-600 dark-mode:focus:text-white dark-mode:hover:text-white dark-mode:text-gray-200 md:mt-0 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline" %>
+          </div>
+        </div>
+      </div>
+      <% end %>
   </div>
 </nav>
+          <% if current_user && current_user.role != "user" %>
+
 <nav class="bg-gray-50 dark:bg-gray-700">
   <div class="py-3 px-4 mx-auto max-w-screen-xl md:px-6">
     <div class="flex items-center">
@@ -109,10 +141,10 @@
         <li> <%= link_to "Assemblies", assemblies_path,  class:"text-gray-900 dark:text-white hover:underline" %></li>
         <li> <%= link_to "Sub Districts", sub_districts_path,  class:"text-gray-900 dark:text-white hover:underline" %>
         </li>
-
         <li> <%= link_to "Payments", payments_path,  class:"text-gray-900 dark:text-white hover:underline" %></li>
         <li> <%= link_to "Taxes", store_taxes_path,  class:"text-gray-900 dark:text-white hover:underline" %></li>
       </ul>
     </div>
   </div>
 </nav>
+<% end %>
