--- a/app/views/stores/_store.html.erb
+++ b/app/views/stores/_store.html.erb
@@ -65,8 +65,14 @@
   </p>
 
   <% if action_name != "show" %>
-    <%= link_to "Show this store", store, class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <%= link_to 'Edit this store', edit_store_path(store), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
-    <hr class="mt-6">
+  <% if can? :read, store %>
+
+  <%= link_to "Show this store", store, class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+  <%end %>
+  <% if can? :update, @store %>
+
+  <%= link_to 'Edit this store', edit_store_path(store), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
+  <%end %>
+  <hr class="mt-6">
   <% end %>
 </div>
