--- a/app/views/stores/edit.html.erb
+++ b/app/views/stores/edit.html.erb
@@ -2,7 +2,9 @@
   <h1 class="font-bold text-4xl">Editing store</h1>
 
   <%= render "form", store: @store %>
+        <% if can? :read, @store %>
 
   <%= link_to "Show this store", @store, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+  <% end %>
   <%= link_to "Back to stores", stores_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
 </div>
