--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -5,7 +5,10 @@
 
   <div class="flex justify-between items-center">
     <h1 class="font-bold text-4xl">Stores</h1>
+        <% if can? :create, @stores %>
+
     <%= link_to 'New store', new_store_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
+  <% end %>
   </div>
 
   <div id="stores" class="min-w-full">
