Restrict user access to pages based on roles

--- a/app/views/stores/_store.html.erb
+++ b/app/views/stores/_store.html.erb
@@ -69,7 +69,7 @@
 
   <%= link_to "Show this store", store, class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
   <%end %>
-  <% if can? :update, @store %>
+  <% if can? :update, store %>
 
   <%= link_to 'Edit this store', edit_store_path(store), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
   <%end %>
