--- a/app/views/assemblies/edit.html.erb
+++ b/app/views/assemblies/edit.html.erb
@@ -1,8 +1,12 @@
-<div class="mx-auto md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl">Editing assembly</h1>
 
-  <%= render "form", assembly: @assembly %>
+<div class="flex  justify-center px-4 sm:px-6 lg:px-8 my-8">
+  <div class="w-full lg:max-w-[60%] md:max-w-[100%] ">
+<h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl sm:tracking-tight">
+  <span class="block">Editing assembly</span>
+</h2>
 
-  <%= link_to "Show this assembly", @assembly, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+<%= render "form", assembly: @assembly %>
+
   <%= link_to "Back to assemblies", assemblies_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-</div>
+
+  </div></div>
