Update store UI styles

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,13 +12,23 @@
   </head>
   <body>
     <main>
-    <%= render 'shared/navbar' %>
-                      <div class="flash"><%= render 'shared/flash' %> </div>
+      <%= render 'shared/navbar' %>
+      <div class="flash"><%= render 'shared/flash' %> </div>
 
       <div class="max-w-9xl mx-auto px-4 py-2 sm:px-6 lg:px-8">
 
         <div class="mx-auto max-w-9xl">
           <%= yield %>
+          <% if not current_page?(root_path) %>
+          <%= link_to :back, class:"text-blue-700 border border-blue-700 hover:bg-blue-700 hover:text-white focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm p-2.5 text-center inline-flex items-center mr-2 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:focus:ring-blue-800 my-5" do %>
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left"
+            viewBox="0 0 16 16">
+            <path fill-rule="evenodd"
+              d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z" />
+          </svg> <span class="sr-only">Go back</span>
+          <% end%>
+          <% end %>
+
         </div>
       </div>
       </div>
