--- a/app/views/stores/_store.html.erb
+++ b/app/views/stores/_store.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= dom_id store %>">
+<!-- <div id="<%= dom_id store %>">
   <p class="my-5">
     <strong class="block font-medium mb-1">Assembly:</strong>
     <%= store.assembly.name %>
@@ -75,4 +75,4 @@
   <%end %>
   <hr class="mt-6">
   <% end %>
-</div>
+</div> -->
