--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -139,7 +139,7 @@
       <ul class="flex flex-row mt-0 mr-6 space-x-8 text-sm font-medium">
         <li> <%= link_to "Stores", stores_path,  class:"text-gray-900 dark:text-white hover:underline" %></li>
         <li> <%= link_to "Communities", communities_path,  class:"text-gray-900 dark:text-white hover:underline" %></li>
-        <li> <%= link_to "Assemblies", assemblies_path,  class:"text-gray-900 dark:text-white hover:underline" %></li>
+        <!-- <li> <%= link_to "Assemblies", assemblies_path,  class:"text-gray-900 dark:text-white hover:underline" %></li> -->
         <li> <%= link_to "Sub Districts", sub_districts_path,  class:"text-gray-900 dark:text-white hover:underline" %>
         </li>
         <li> <%= link_to "Payments", payments_path,  class:"text-gray-900 dark:text-white hover:underline" %></li>
